feat: fix service and generate de diferent tests